# fantasy-football-drafter-v2

./: README.md  pyproject.toml
fantasy_drafter/data_pipeline/: __init__.py  scraper.py
fantasy_drafter/training/: __init__.py
fantasy_football_drafter_v2/: __main__.py
fantasydrafter/data/: PlayerScraper.py
scripts/: runner.py
