[project]
name = "fantasy-football-drafter-v2"
version = "0.1.0"
description = "A reinforcement learning-based fantasy football draft assistant"
authors = [
    {name = "Tarek", email = "tarek@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["fantasy_football_drafter_v2"]

[tool.hatch.build.targets.wheel]
packages = ["fantasy_football_drafter_v2"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
