[project]
name = "FantasyFootballDrafter"
version = "0.0.1"
description = "A reinforcement learning-based fantasy football draft assistant"

authors = [
    {name = "Tarek", email = "tareksallam@cmail.carleton.ca"}
]

readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.284",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["FantasyFootballDrafter"]

[tool.hatch.build.targets.wheel]
packages = ["FantasyFootballDrafter"]

[tool.ruff]
select = ["E", "F"]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
