[project]
name = "fantasydrafter"
version = "0.0.1"
description = "A reinforcement learning-based fantasy football draft assistant"

authors = [
    {name = "Tarek", email = "tareksallam@cmail.carleton.ca"}
]

readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.284",
    "mypy>=1.0.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["fantasydrafter"]

[tool.hatch.build.targets.wheel]
packages = ["fantasydrafter"]

[tool.ruff]
select = ["E", "F"]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
